--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/svg/icons/git.svg" />
     <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
+    name="viewport"
+    content="width=device-width, initial-scale=1.0"
     />
+    <meta name="description" content="Mi objetivo es crear experiencias web cautivadoras y funcionales que brinden una navegación intuitiva y atractiva. Me enorgullezco de mi capacidad para transformar ideas y diseños en código limpio y eficiente, garantizando un rendimiento óptimo y una experiencia de usuario excepcional." />
     <title>Portfolio</title>
+    <link rel="icon" type="image/svg+xml" href="/svg/icons/git.svg" />
   </head>
   <body>
     <div id="root"></div>
