--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1.0"
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
     />
-    <meta name="description" content="Mi objetivo es crear experiencias web cautivadoras y funcionales que brinden una navegación intuitiva y atractiva. Me enorgullezco de mi capacidad para transformar ideas y diseños en código limpio y eficiente, garantizando un rendimiento óptimo y una experiencia de usuario excepcional." />
+    <link
+      rel="icon"
+      href="/svg/icons/jakekap-logo.svg"
+      type="image/svg+xml"
+    />
+    <meta
+      name="description"
+      content="Mi objetivo es crear experiencias web cautivadoras y funcionales que brinden una navegación intuitiva y atractiva. Me enorgullezco de mi capacidad para transformar ideas y diseños en código limpio y eficiente, garantizando un rendimiento óptimo y una experiencia de usuario excepcional."
+    />
     <title>Portfolio</title>
-    <link rel="icon" type="image/svg+xml" href="/svg/icons/git.svg" />
   </head>
   <body>
     <div id="root"></div>
