:sparkles: Add new description and change title
add new description and change title

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     />
     <meta
       name="description"
-      content="Mi objetivo es crear experiencias web cautivadoras y funcionales que brinden una navegación intuitiva y atractiva. Me enorgullezco de mi capacidad para transformar ideas y diseños en código limpio y eficiente, garantizando un rendimiento óptimo y una experiencia de usuario excepcional."
+      content="Welcome to my website! I craft captivating and functional web experiences with intuitive navigation and clean, efficient code. Explore my work for exceptional user experiences."
     />
-    <title>Portfolio</title>
+    <title>Jakekap | Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
